mtgoxticker.dcproj/project/widget.wdgt/main.css
/* 
 This file was generated by Dashcode.  
 You may edit this file to customize your widget or web page 
 according to the license.txt file included in the project.
 */

body {
    margin: 0px;
}

#frontImg {
    position: absolute;
    display: block;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    width: auto;
    height: auto;
}

#info {
    position: absolute;
    right: 15px;
    bottom: 18px;
    width: 13px;
    height: 13px;
    top: auto;
    left: auto;
}

#back {
    display: none;
}

#backImg {
    position: absolute;
    display: block;
    top: 0px;
    left: 0px;
    bottom: 0px;
    right: 0px;
    width: auto;
    height: auto;
}

#done {
    position: absolute;
    right: 21px;
    bottom: 21px;
    margin-left: auto;
    margin-top: auto;
}

#backDevelopedWith {
    position: absolute;
    width: 150px;
    height: 49px;
    left: 37px;
    top: 58px;
    margin-right: auto;
}

#text {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    left: 28px;
    top: 92px;
    width: auto;
    height: auto;
}

.selected #text {
    color: white;
}

#text1 {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    left: 28px;
    top: 113px;
    width: auto;
    height: auto;
}

.selected #text1 {
    color: white;
}

#text2 {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    left: 28px;
    top: 133px;
    width: auto;
    height: auto;
}

.selected #text2 {
    color: white;
}

#text3 {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    left: 28px;
    top: 154px;
    width: auto;
    height: auto;
}

.selected #text3 {
    color: white;
}

#text4 {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    left: 28px;
    top: 176px;
    width: auto;
    height: auto;
}

.selected #text4 {
    color: white;
}

#text5 {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    left: 28px;
    top: 198px;
    width: auto;
    height: auto;
}

.selected #text5 {
    color: white;
}

#ticker_last {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    text-align: left;
    left: 136px;
    top: 92px;
    right: 22px;
    width: auto;
    bottom: 192px;
    height: auto;
}

.selected #ticker_last {
    color: white;
}

#ticker_high {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    text-align: left;
    left: 136px;
    top: 113px;
    right: 22px;
    width: auto;
    bottom: 171px;
    height: auto;
}

.selected #ticker_high {
    color: white;
}

#ticker_low {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    text-align: left;
    left: 136px;
    top: 133px;
    right: 22px;
    width: auto;
    bottom: 151px;
    height: auto;
}

.selected #ticker_low {
    color: white;
}

#ticker_buy {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    text-align: left;
    left: 136px;
    top: 154px;
    right: 22px;
    width: auto;
    bottom: 130px;
    height: auto;
}

.selected #ticker_buy {
    color: white;
}

#ticker_sell {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    text-align: left;
    left: 136px;
    top: 176px;
    right: 22px;
    width: auto;
    bottom: 108px;
    height: auto;
}

.selected #ticker_sell {
    color: white;
}

#ticker_volume {
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-size: 16px;
    text-align: left;
    left: 136px;
    top: 198px;
    right: 27px;
    width: auto;
    bottom: 86px;
    height: auto;
}

.selected #ticker_volume {
    color: white;
}

#updateButton {
    font-family: HelveticaNeue-Bold;
    font-size: 12px;
    text-align: center;
    cursor: default;
    -khtml-user-select: none;
    position: absolute;
    margin-top: 0px;
    width: 60px;
    left: 82px;
    height: 25px;
    top: 239px;
}

#image {
    width: 180px;
    height: 37px;
    position: absolute;
    right: auto;
    bottom: auto;
    margin-top: 0px;
    left: 22px;
    top: 29px;
}

#inner_image {
    position: absolute;
    bottom: 0px;
    right: 0px;
    left: 0px;
    top: 0px;
    margin: auto;
    max-width: 100%;
    max-height: 100%;
    width: auto;
    height: auto;
}

#text6 {
    font-size: 13px;
    font-family: 'Lucida Grande', Arial, sans-serif;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    left: 37px;
    top: 138px;
    right: 38px;
    width: auto;
    bottom: 109px;
    height: auto;
    color: rgb(153, 153, 153);
    text-align: center;
}

.selected #text6 {
    color: white;
}

#textarea {
    color: black;
    font-family: HelveticaNeue;
    font-size: 10pt;
    position: absolute;
    right: auto;
    bottom: auto;
    margin-top: 0px;
    left: 37px;
    width: 144px;
    height: 30px;
    top: 204px;
}

